objects/SFDC_Gecko_Platform_Mapping__c.object
<CustomObject><fields>
        <fullName>Gecko_OS_Name__c</fullName>
        <label>Gecko OS Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Gecko_Platform_Name__c</fullName>
        <label>Gecko Platform Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>sfdc_platform_os_Name__c</fullName>
        <label>sfdc platform-os Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>SFDC Gecko Platform Mapping</label><nameField>
        <displayFormat>S-G-{0000}</displayFormat>
        <label>SFDC Gecko Platform Mapping Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>SFDC Gecko Platform Mappings</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>sfdc_platform_os_Name__c</columns>
        <columns>Gecko_Platform_Name__c</columns>
        <columns>Gecko_OS_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>